syntax = "proto3";

import "google/protobuf/any.proto";

package keboola.storageDriver.credentials;

message GenericBackendCredentials {
  string host = 1;
  string principal = 2;
  string secret = 3;
  uint32 port = 4;
  message RedshiftCredentialsMeta {
    string database = 1;
  }
  message TeradataCredentialsMeta {
    string database = 1;
  }
  message SnowflakeCredentialsMeta {
    string database = 1;
    string warehouse = 2;
    uint32 workspaceStatementTimeoutSeconds = 3;
    uint32 tracingLevel = 4;
  }
  message SynapseCredentialsMeta {
    string database = 1;
    bool useManagedIdentity = 2;
  }
  google.protobuf.Any meta = 5;
}


